--- a/frontend/.devcontainer/devcontainer.json
+++ b/frontend/.devcontainer/devcontainer.json
@@ -5,11 +5,15 @@
     "workspaceFolder": "/workspace",
     "service": "frontend",
     "remoteUser": "root",
+    "postAttachCommand": "git config --global --add safe.directory ./",
     "customizations": {
         "vscode": {
 	    "extenstions": [
 	        "dbaeumer.vscode-eslint"
-	    ]
+	    ],
+        "settings": {
+            "git.openRepositoryInParentFolders": "always"
+        }
 	}
     }
 }
